fixed branc logo in copyright section on mobile

--- a/src/components/Copyright/Copyright.css
+++ b/src/components/Copyright/Copyright.css
@@ -83,6 +83,6 @@
   }
 
   .copy-right-div-top-logo-img{
-    width: 200px;
+    width: 120px;
   }
 } 
